<resources>
    <string name="app_name">Vouriinc Payments</string>
    <string name="explain_vourinc">send and receive money all over the world with vouriinc.</string>
    <string name="login_text">login</string>
    <string name="sing_up_text">sign up</string>
    <string name="fogot_password_text">https://vouriinc.com/login</string>

    <string name="username">username</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="country">country</string>
    <string name="password_text">password</string>
    <string name="password_text_confirm_login_two">confirm your password</string>
    <string name="title_home">Dashboard</string>
    <string name="title_dashboard">Send/Receive</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_vouriinc">home</string>
    <string name="amount_mostly">%s<br>%s</br></string>

    <string-array name="countries">
        <item>Choose Countries</item>
        <item>Cameroon</item>
        <item>France</item>
        <item>Gabon</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
