<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginTwoFragment.Sign_upFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Display1">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:alpha="0.4"
            android:background="@drawable/edit_text_background"
            android:drawableRight="@drawable/ic_person_username_24dp"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/username"
            android:padding="15dp"
            android:textColor="@color/blanc"
            android:textColorHint="@color/blanc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.4"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/phone"
        android:drawableRight="@drawable/ic_phone_24dp"
        android:drawablePadding="15dp"
        android:padding="15dp"
        android:textColor="@color/blanc"
        android:textColorHint="@color/blanc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.4"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/email"
        android:drawablePadding="15dp"
        android:drawableRight="@drawable/ic_email_black_24dp"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/blanc"
        android:textColorHint="@color/blanc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.4"
        android:background="@drawable/edit_text_background"
        android:drawableRight="@drawable/ic_lock_white_24dp"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/blanc"
        android:textColorHint="@color/blanc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.4"
        android:background="@drawable/edit_text_background"
        android:drawableRight="@drawable/ic_lock_white_24dp"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/password_text_confirm_login_two"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/blanc"
        android:textColorHint="@color/blanc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Agree to terms and conditions"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="452dp"
        android:ems="20"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />


    <Button
        android:id="@+id/sign_up_button_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/sign_up_background"
        android:padding="15dp"
        android:text="@string/sing_up_text"
        android:textAllCaps="false"
        android:textColor="@color/blanc"
        android:textStyle="bold"
        android:onClick="onCreateDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.4"
        android:ems="10"
        android:entries="@array/countries"
        android:padding="15dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />


</android.support.constraint.ConstraintLayout>

